syntax = "proto3";

package products;

// Request message for fetching a product
message ProductRequest {
  int32 productId = 1;
}

// Response message containing product details
message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  string description = 5;
  string image = 6;
}

// Request message for fetching a paginated list of products
message GetProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string searchQuery = 3; // optional
}

// Response message containing paginated product details
message PaginatedProductsResponse {
  int32 total = 1;
  int32 totalPages = 2;
  repeated ProductResponse products = 3;
}

// The Product service definition
service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc GetProducts(GetProductsRequest) returns (PaginatedProductsResponse);
}
